--- a/FXMLDocument.fxml
+++ b/FXMLDocument.fxml
@@ -34,7 +34,7 @@
                <children>
                   <Pane fx:id="AddPurchasePane" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: WHITE;" visible="false">
                      <children>
-                        <Label fx:id="AddMessageDate" layoutX="22.0" layoutY="31.0" text="Add New Items for March 29, 2016">
+                        <Label fx:id="AddMessageDate" layoutX="22.0" layoutY="31.0" text="Add New Purchases for March 29, 2016">
                            <font>
                               <Font size="32.0" />
                            </font>
@@ -45,37 +45,37 @@
                            </font>
                         </Label>
                         <TextField fx:id="AddItemName1" layoutX="49.0" layoutY="161.0" prefHeight="25.0" prefWidth="215.0" />
+                        <TextField fx:id="AddPrice1" layoutX="296.0" layoutY="161.0" prefHeight="25.0" prefWidth="86.0" />
+                        <ComboBox fx:id="AddStoreName1" layoutX="414.0" layoutY="161.0" prefWidth="150.0" />
+                        <ComboBox fx:id="AddCategory1" layoutX="603.0" layoutY="161.0" prefWidth="150.0" />
                         <TextField fx:id="AddItemName2" layoutX="49.0" layoutY="210.0" prefHeight="25.0" prefWidth="215.0" />
+                        <TextField fx:id="AddPrice2" layoutX="296.0" layoutY="210.0" prefHeight="25.0" prefWidth="86.0" />
+                        <ComboBox fx:id="AddStoreName2" layoutX="414.0" layoutY="210.0" prefWidth="150.0" />
+                        <ComboBox fx:id="AddCategory2" layoutX="603.0" layoutY="210.0" prefWidth="150.0" />
                         <TextField fx:id="AddItemName3" layoutX="49.0" layoutY="262.0" prefWidth="215.0" />
+                        <TextField fx:id="AddPrice3" layoutX="296.0" layoutY="262.0" prefHeight="25.0" prefWidth="86.0" />
+                        <ComboBox fx:id="AddStoreName3" layoutX="414.0" layoutY="262.0" prefWidth="150.0" />
+                        <ComboBox fx:id="AddCategory3" layoutX="603.0" layoutY="262.0" prefWidth="150.0" />
                         <TextField fx:id="AddItemName4" layoutX="49.0" layoutY="310.0" prefWidth="215.0" />
+                        <TextField fx:id="AddPrice4" layoutX="296.0" layoutY="310.0" prefHeight="25.0" prefWidth="86.0" />
+                        <ComboBox fx:id="AddStoreName4" layoutX="414.0" layoutY="310.0" prefWidth="150.0" />
+                        <ComboBox fx:id="AddCategory4" layoutX="603.0" layoutY="310.0" prefWidth="150.0" />
+                        <ComboBox fx:id="AddStoreNameAll" layoutX="414.0" layoutY="360.0" onAction="#handleStoreNameAllAction" onContextMenuRequested="#handleStoreNameAllAction" prefWidth="150.0" />
+                        <ComboBox fx:id="AddCategoryAll" layoutX="603.0" layoutY="360.0" onAction="#handleCategoryAllAction" prefWidth="150.0" />
+                        <Button fx:id="AddItemsButton" layoutX="146.0" layoutY="360.0" mnemonicParsing="false" onAction="#handleAddButtonAction" prefHeight="108.0" prefWidth="148.0" style="-fx-pref-height: 50; -fx-pref-width: 150;" text="Add Purchases" />
                         <Label layoutX="296.0" layoutY="132.0" text="Price">
                            <font>
                               <Font size="14.0" />
                            </font></Label>
-                        <TextField fx:id="AddPrice1" layoutX="296.0" layoutY="161.0" prefHeight="25.0" prefWidth="86.0" />
                         <Label layoutX="414.0" layoutY="132.0" text="Store Name">
                            <font>
                               <Font size="14.0" />
                            </font></Label>
-                        <ComboBox fx:id="AddStoreName1" layoutX="414.0" layoutY="161.0" prefWidth="150.0" />
-                        <ComboBox fx:id="AddStoreName2" layoutX="414.0" layoutY="210.0" prefWidth="150.0" />
-                        <ComboBox fx:id="AddStoreName3" layoutX="414.0" layoutY="262.0" prefWidth="150.0" />
-                        <ComboBox fx:id="AddStoreName4" layoutX="414.0" layoutY="310.0" prefWidth="150.0" />
-                        <ComboBox fx:id="AddStoreNameAll" layoutX="414.0" layoutY="360.0" onAction="#handleStoreNameAllAction" onContextMenuRequested="#handleStoreNameAllAction" prefWidth="150.0" />
-                        <ComboBox fx:id="AddCategoryAll" layoutX="603.0" layoutY="360.0" onAction="#handleCategoryAllAction" prefWidth="150.0" />
-                        <ComboBox fx:id="AddCategory4" layoutX="603.0" layoutY="310.0" prefWidth="150.0" />
-                        <ComboBox fx:id="AddCategory3" layoutX="603.0" layoutY="262.0" prefWidth="150.0" />
-                        <ComboBox fx:id="AddCategory2" layoutX="603.0" layoutY="210.0" prefWidth="150.0" />
-                        <ComboBox fx:id="AddCategory1" layoutX="603.0" layoutY="161.0" prefWidth="150.0" />
                         <Label layoutX="603.0" layoutY="132.0" text="Category">
                            <font>
                               <Font size="14.0" />
                            </font></Label>
-                        <Button fx:id="AddItemsButton" layoutX="146.0" layoutY="360.0" mnemonicParsing="false" onAction="#handleAddButtonAction" prefHeight="108.0" prefWidth="148.0" style="-fx-pref-height: 50; -fx-pref-width: 150;" text="Add Items" />
-                        <Label layoutX="75.0" layoutY="434.0" text="All Purchases for Today" />
-                        <TextField fx:id="AddPrice2" layoutX="296.0" layoutY="210.0" prefHeight="25.0" prefWidth="86.0" />
-                        <TextField fx:id="AddPrice3" layoutX="296.0" layoutY="262.0" prefHeight="25.0" prefWidth="86.0" />
-                        <TextField fx:id="AddPrice4" layoutX="296.0" layoutY="310.0" prefHeight="25.0" prefWidth="86.0" />
+                        <Label fx:id="AddPurchasesDateLabel" layoutX="75.0" layoutY="434.0" text="All Purchases for " />
                         <ScrollPane layoutX="75.0" layoutY="462.0" prefHeight="171.0" prefViewportHeight="169.0" prefViewportWidth="616.0" prefWidth="698.0">
                            <content>
                               <HBox>
@@ -134,14 +134,15 @@
                               </HBox>
                            </content>
                         </ScrollPane>
-                        <DatePicker fx:id="AddCalendar" layoutX="591.0" layoutY="42.0" onAction="#handleAddChangeDateAction" />
-                        <Label layoutX="589.0" layoutY="14.0" text="Change Date">
+                        <DatePicker fx:id="AddCalendar" layoutX="629.0" layoutY="42.0" onAction="#handleAddChangeDateAction" />
+                        <Label layoutX="629.0" layoutY="14.0" text="Change Date">
                            <font>
                               <Font size="14.0" />
                            </font></Label>
+                        <Text layoutX="49.0" layoutY="88.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Record purchases for the date listed above. All fields are optional except for the Item Name." />
                      </children>
                   </Pane>
-                  <Pane fx:id="CreateListPane" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: WHITE;">
+                  <Pane fx:id="CreateListPane" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: WHITE;" visible="false">
                      <children>
                         <Label layoutX="22.0" layoutY="14.0" text="Manage Purchases">
                            <font>
@@ -227,12 +228,33 @@
                               </HBox>
                            </content>
                         </ScrollPane>
-                        <Label layoutX="231.0" layoutY="588.0" text="Total Amiount Spent: 3,073.50" />
-                        <Label layoutX="229.0" layoutY="528.0" text="Time Frame; 203 days" />
-                        <Label layoutX="229.0" layoutY="556.0" text="Most Purchased Item: Milk (12)" />
-                        <Label layoutX="432.0" layoutY="529.0" text="Most Frequent Store: Target (11)" />
-                        <Label layoutX="432.0" layoutY="556.0" text="Most Frequent Category: Food (20)" />
-                        <Button alignment="CENTER" layoutX="73.0" layoutY="516.0" mnemonicParsing="false" text="Delete&#10;Selected" textAlignment="CENTER" />
+                        <Label fx:id="TotalPriceLabel" layoutX="445.0" layoutY="585.0" text="Total Amount Spent:" />
+                        <Label fx:id="TimeFrameLabel" layoutX="229.0" layoutY="528.0" text="Time Frame:" />
+                        <Label fx:id="ModeItemLabel" layoutX="229.0" layoutY="556.0" text="Most Frequent Item:" />
+                        <Label fx:id="ModeStoreLabel" layoutX="229.0" layoutY="585.0" text="Most Frequent Store:" />
+                        <Label fx:id="ModeCategoryLabel" layoutX="229.0" layoutY="613.0" text="Most Frequent Category:" />
+                        <Button alignment="CENTER" layoutX="51.0" layoutY="516.0" mnemonicParsing="false" onAction="#handleDeleteSelectedButtonAction" text="Delete&#10;Selected" textAlignment="CENTER" />
+                        <Label fx:id="MeanPriceLabel" layoutX="443.0" layoutY="556.0" text="Mean Price of Purchases:" />
+                        <Text layoutX="37.0" layoutY="58.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Use the search parameters to find a recorded purchase or a list of recorded purchases." />
+                     </children>
+                  </Pane>
+                  <Pane fx:id="HomePane" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: WHITE;">
+                     <children>
+                        <Label alignment="CENTER" layoutX="208.0" layoutY="50.0" text="Welcome to the &#10;Shopping List of the Future" textAlignment="CENTER">
+                           <font>
+                              <Font size="36.0" />
+                           </font>
+                        </Label>
+                        <Button layoutX="241.0" layoutY="222.0" mnemonicParsing="false" onAction="#handleAddPurchaseMenuAction" text="Add New&#10;Purchases&#10;" textAlignment="CENTER">
+                           <font>
+                              <Font size="24.0" />
+                           </font>
+                        </Button>
+                        <Button layoutX="460.0" layoutY="222.0" mnemonicParsing="false" onAction="#handleCreateListMenuAction" text="Manage&#10;Purchases&#10;" textAlignment="CENTER">
+                           <font>
+                              <Font size="24.0" />
+                           </font>
+                        </Button>
                      </children>
                   </Pane>
                </children>
