--- a/FXMLDocument.fxml
+++ b/FXMLDocument.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="700.0" prefWidth="1100.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="shopping.list.csc340.project2.FXMLDocumentController">
+<AnchorPane id="AnchorPane" prefHeight="700.0" prefWidth="1100.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ShoppingListPackage.FXMLDocumentController">
    <children>
       <BorderPane prefHeight="700.0" prefWidth="1100.0" AnchorPane.rightAnchor="0.0">
          <top>
